# Copyright (C) 2022 Sergey V. Kostyuk
#
# This file is part of libclassic.
#
# The GNU C Library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
#
# The GNU C Library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with the GNU C Library; if not, see
# <https://www.gnu.org/licenses/>. 

nobase_include_HEADERS = classic/common.h classic/map.h \
	classic/list.h classic/vector.h \
	classic/rb_tree.h classic/hb_tree.h \
	classic/pr_tree.h classic/sp_tree.h \
	classic/tr_tree.h classic/wb_tree.h \
	classic/hashtable1.h classic/hashtable2.h \
	classic/skiplist.h
